--- a/package.json
+++ b/package.json
@@ -1,49 +1,60 @@
 {
-	"name": "name-frontend",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-	},
-	"devDependencies": {
-		"@internationalized/date": "^3.6.0",
-		"@sveltejs/adapter-auto": "^3.3.1",
-		"@sveltejs/kit": "^2.15.2",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/typography": "^0.5.16",
-		"bits-ui": "1.0.0-next.78",
-		"clsx": "^2.1.1",
-		"formsnap": "2.0.0",
-		"lucide-svelte": "^0.469.0",
-		"mode-watcher": "^0.5.0",
-		"svelte": "^5.17.3",
-		"svelte-check": "^4.1.3",
-		"svelte-radix": "^2.0.1",
-		"svelte-sonner": "^0.3.28",
-		"sveltekit-superforms": "^2.22.1",
-		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.7.3",
-		"vite": "^6.0.7",
-		"zod": "^3.24.1"
-	},
-	"type": "module",
-	"dependencies": {
-		"@tanstack/table-core": "^8.20.5",
-		"autoprefixer": "^10.4.20",
-		"axios": "^1.7.9",
-		"axios-jwt": "^4.0.3",
-		"carta-md": "^4.6.7",
-		"js-sha256": "^0.11.0",
-		"md5": "^2.3.0",
-		"svelecte": "^5.1.2",
-		"svelte-legos": "^0.2.5",
-		"svelte-markdown": "^0.4.1"
-	}
+  "name": "name-frontend",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+  },
+  "devDependencies": {
+    "@exodus/schemasafe": "^1.3.0",
+    "@internationalized/date": "^3.8.2",
+    "@lucide/svelte": "^0.482.0",
+    "@sinclair/typebox": "^0.34.36",
+    "@sveltejs/adapter-auto": "^3.3.1",
+    "@sveltejs/kit": "^2.22.0",
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@typeschema/class-validator": "^0.2.0",
+    "@vinejs/vine": "^1.8.0",
+    "arktype": "^2.1.20",
+    "bits-ui": "^1.8.0",
+    "class-validator": "^0.14.2",
+    "clsx": "^2.1.1",
+    "formsnap": "2.0.0-next.1",
+    "joi": "^17.13.3",
+    "mode-watcher": "^1.0.8",
+    "paneforge": "1.0.0-next.6",
+    "superstruct": "^2.0.2",
+    "svelte": "^5.34.7",
+    "svelte-check": "^4.2.2",
+    "svelte-sonner": "^0.3.28",
+    "sveltekit-superforms": "^2.27.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.3",
+    "valibot": "^0.42.1",
+    "vaul-svelte": "1.0.0-next.7",
+    "vite": "^6.3.5",
+    "yup": "^1.6.1",
+    "zod": "^3.25.67"
+  },
+  "type": "module",
+  "dependencies": {
+    "@tanstack/table-core": "^8.21.3",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.10.0",
+    "axios-jwt": "^4.0.3",
+    "carta-md": "^4.11.1",
+    "js-sha256": "^0.11.1",
+    "md5": "^2.3.0",
+    "svelecte": "^5.2.0",
+    "svelte-legos": "^0.2.5",
+    "svelte-markdown": "^0.4.1"
+  }
 }
